--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Angular Seedling</title>
-  <link rel="stylesheet" href="css/app.css"/>
+  <link rel="stylesheet" href="application/application.css"/>
 </head>
 <body>
  	<nav>
@@ -17,8 +17,12 @@
   -->
   <script src="lib/angular/angular.js"></script>
   <script src="application/application.js"></script>
+  <script src="application/configuration-service.js"></script>
+  <script src="menu/menu-service.js"></script>
   <script src="details/details-controller.js"></script>
   <script src="error/error-controller.js"></script>
+  <script src="menu/menu-service.js"></script>
   <script src="menu/menu-controller.js"></script>
+  <script src="menu/menu-item-directive.js"></script>
 </body>
 </html>
