created date filter, reorganized lib folder

--- a/app/index.html
+++ b/app/index.html
@@ -15,14 +15,14 @@
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.2/angular.min.js"></script>
   -->
-  <script src="lib/angular/angular.js"></script>
+  <script src="lib/angular.js"></script>
   <script src="application/application.js"></script>
   <script src="application/configuration-service.js"></script>
   <script src="menu/menu-service.js"></script>
   <script src="details/details-controller.js"></script>
   <script src="error/error-controller.js"></script>
-  <script src="menu/menu-service.js"></script>
   <script src="menu/menu-controller.js"></script>
   <script src="menu/menu-item-directive.js"></script>
+  <script src="utilities/date-filter.js"></script>
 </body>
 </html>
