--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,6 @@
   <script src="error/error-controller.js"></script>
   <script src="menu/menu-controller.js"></script>
   <script src="menu/menu-item-directive.js"></script>
-  <script src="utilities/date-filter.js"></script>
+  <script src="date-time/to-date-string-filter.js"></script>
 </body>
 </html>
