--- a/app/details/details-partial.html
+++ b/app/details/details-partial.html
@@ -1,3 +1,5 @@
-<h1>{{item.name}}</h1>
-<p>{{item.description}}</p>
-<p>Created on {{item.timestamp | toDateString}}</p>
+<div ng-controller="details">
+	<h1>{{item.name}}</h1>
+	<p>{{item.description}}</p>
+	<p>Created on {{item.timestamp | toDateString}}</p>
+</div>
