--- a/app/index-async.html
+++ b/app/index-async.html
@@ -7,16 +7,18 @@
       display: none;
     }
   </style>
+  <script src='//ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular.min.js'></script>
+
   <script>
     // include angular loader, which allows the files to load in any order
     /*
-     AngularJS v1.0.0rc1
-     (c) 2010-2012 AngularJS http://angularjs.org
+     AngularJS v1.3.3-build.3559+sha.14ff529
+     (c) 2010-2014 Google, Inc. http://angularjs.org
      License: MIT
     */
-    'use strict';(function(i){function d(c,a,e){return c[a]||(c[a]=e())}return d(d(i,"angular",Object),"module",function(){var c={};return function(a,e,f){e&&c.hasOwnProperty(a)&&(c[a]=null);return d(c,a,function(){function b(a,b,d){return function(){c[d||"push"]([a,b,arguments]);return g}}if(!e)throw Error("No module: "+a);var c=[],d=[],h=b("$injector","invoke"),g={_invokeQueue:c,_runBlocks:d,requires:e,name:a,provider:b("$provide","provider"),factory:b("$provide","factory"),service:b("$provide","service"),
-    value:b("$provide","value"),constant:b("$provide","constant","unshift"),filter:b("$filterProvider","register"),directive:b("$compileProvider","directive"),config:h,run:function(a){d.push(a);return this}};f&&h(f);return g})}})})(window);
-
+    (function(){'use strict';function d(b){return function(){var c=arguments[0],e;e="["+(b?b+":":"")+c+"] http://errors.angularjs.org/1.3.3-build.3559+sha.14ff529/"+(b?b+"/":"")+c;for(c=1;c<arguments.length;c++){e=e+(1==c?"?":"&")+"p"+(c-1)+"=";var d=encodeURIComponent,a;a=arguments[c];a="function"==typeof a?a.toString().replace(/ \{[\s\S]*$/,""):"undefined"==typeof a?"undefined":"string"!=typeof a?JSON.stringify(a):a;e+=d(a)}return Error(e)}}(function(b){function c(a,c,b){return a[c]||(a[c]=b())}var e=
+    d("$injector"),n=d("ng");b=c(b,"angular",Object);b.$minErr=b.$minErr||d;return c(b,"module",function(){var a={};return function(b,d,g){if("hasOwnProperty"===b)throw n("badname","module");d&&a.hasOwnProperty(b)&&(a[b]=null);return c(a,b,function(){function a(b,d,e,f){f||(f=c);return function(){f[e||"push"]([b,d,arguments]);return h}}if(!d)throw e("nomod",b);var c=[],k=[],l=[],m=a("$injector","invoke","push",k),h={_invokeQueue:c,_configBlocks:k,_runBlocks:l,requires:d,name:b,provider:a("$provide",
+    "provider"),factory:a("$provide","factory"),service:a("$provide","service"),value:a("$provide","value"),constant:a("$provide","constant","unshift"),animation:a("$animateProvider","register"),filter:a("$filterProvider","register"),controller:a("$controllerProvider","register"),directive:a("$compileProvider","directive"),config:m,run:function(a){l.push(a);return this}};g&&m(g);return h})}})})(window)})(window);
     // include a third-party async loader library
     /*!
      * $script.js v1.3
@@ -29,29 +31,31 @@
 
     // load all of the dependencies asynchronously.
     $script([
-      'lib/angular/angular.js',
-      'js/app.js',
-      'js/services.js',
-      'js/controllers.js',
-      'js/filters.js',
-      'js/directives.js'
+      //In production only.
+      // '//ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular.min.js',
+      '//ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular-route.js',
+      // 'lib/angular.js',
+      'application/application.js',
+      'application/configuration-constants.js',
+      'menu/menu-service.js',
+      'details/details-controller.js',
+      'error/error-controller.js',
+      'menu/menu-controller.js',
+      'menu/menu-item-directive.js',
+      'date-time/to-date-string-filter.js'
     ], function() {
       // when all is done, execute bootstrap angular application
-      angular.bootstrap(document, ['myApp']);
+      angular.bootstrap(document, ['application']);
     });
   </script>
-  <title>My AngularJS App</title>
-  <link rel="stylesheet" href="css/app.css">
+  <title>Angular Seedling</title>
+  <link rel="stylesheet" href="application/application.css"/>
 </head>
 <body>
-  <ul class="menu">
-    <li><a href="#/view1">view1</a></li>
-    <li><a href="#/view2">view2</a></li>
-  </ul>
+  <nav>
+    <ng-include src="'menu/menu-partial.html'"/>
+  </nav>
 
-  <div ng-view></div>
-
-  <div>Angular seed app: v<span app-version></span></div>
-
+  <div data-ng-view="" />
 </body>
 </html>
