--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,8 @@
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.2/angular.min.js"></script>
   -->
-  <script src="lib/angular.js"></script>
+  <script src='//ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular.min.js'></script>
+  <script src='//ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular-route.js'></script>
   <script src="application/application.js"></script>
   <script src="application/configuration-constants.js"></script>
   <script src="menu/menu-service.js"></script>
