A bit of refactoring.

--- a/app/index.html
+++ b/app/index.html
@@ -10,11 +10,8 @@
 		<ng-include src="'menu/menu-partial.html'"/>
  	</nav>
 	
-  <ng-view/>
+  <div data-ng-view="" />
 
-  <!-- In production use:
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.2/angular.min.js"></script>
-  -->
   <script src='//ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular.min.js'></script>
   <script src='//ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular-route.js'></script>
   <script src="application/application.js"></script>
